--- a/public/index.html
+++ b/public/index.html
@@ -402,6 +402,25 @@
    </div>
   
 	 <script>
+      // Example POST method implementation:
+      async function postData(url = "", data = {}) {
+        // Default options are marked with *
+        const response = await fetch(url, {
+              method: "POST", // *GET, POST, PUT, DELETE, etc.
+              mode: "cors", // no-cors, *cors, same-origin
+              cache: "no-cache", // *default, no-cache, reload, force-cache, only-if-cached
+              credentials: "same-origin", // include, *same-origin, omit
+              headers: {
+                "Content-Type": "application/json",
+                // 'Content-Type': 'application/x-www-form-urlencoded',
+              },
+              redirect: "follow", // manual, *follow, error
+              referrerPolicy: "no-referrer", // no-referrer, *no-referrer-when-downgrade, origin, origin-when-cross-origin, same-origin, strict-origin, strict-origin-when-cross-origin, unsafe-url
+              body: JSON.stringify(data), // body data type must match "Content-Type" header
+        });
+        return response.json(); // parses JSON response into native JavaScript objects
+      }
+
 			const span = document.getElementById('coords');
 			const spanC = document.getElementById('coords-calc');
 
@@ -461,9 +480,12 @@
           if( erroneos >  0 )
             return;
   			}
-  			
-  			const json = JSON.stringify( serialized );
-				window.location.href = "upload_form.php?solicitud=" + btoa(json); 
+  			postData("http://127.0.0.1/api/post-solicitud", serialized).then((data) => {
+          console.log(data); // JSON data parsed by `data.json()` call
+        });
+
+  			// const json = JSON.stringify( serialized );
+				// window.location.href = "upload_form.php?solicitud=" + btoa(json); 
 			};
 
 			const logSubmit = (event) => {
