--- a/public/index.html
+++ b/public/index.html
@@ -97,14 +97,14 @@
           <!-- Nombre y apellidos del niño -->
           <div class="row g-3">
             <div class="col-sm-6">
-              <label for="firstName" class="form-label">Del niño/a apellidos</label>
+              <label for="apellidos" class="form-label">Del niño/a apellidos</label>
               <input type="text" class="form-control" id="apellidos" name="apellidos" placeholder="" value="" required>
               <div class="invalid-feedback">
                 El valor para los apellidos es obligatorio
               </div>
             </div>
             <div class="col-sm-6">
-              <label for="lastName" class="form-label">y nombre</label>
+              <label for="nombre" class="form-label">y nombre</label>
               <input type="text" class="form-control" id="nombre" name="nombre" placeholder="" value="" required>
               <div class="invalid-feedback">
                 El valor para el nombre es obligatorio
@@ -115,7 +115,7 @@
           <!-- Parroquia y fecha nacimiento -->
           <div class="row g-3">
             <div class="col-sm-8">
-              <label for="firstName" class="form-label">Parroquia donde se bautizó</label>
+              <label for="bautizo" class="form-label">Parroquia donde se bautizó</label>
               <select class="selectpicker col-12" name="bautizo">
                 <option>San Vicente Ferrer</option>
                 <option>Inmaculada Concepción</option>
@@ -129,8 +129,8 @@
               </div> -->
             </div>
             <div class="col-sm-4">
-              <label for="lastName" class="form-label">Fecha de nacimiento (dd/mm/aaaa)</label>
-              <input type="text" class="form-control" id="nacimiento" name="fecha-nacimiento" placeholder="" value="" required>
+              <label for="fechaNacimiento" class="form-label">Fecha de nacimiento (dd/mm/aaaa)</label>
+              <input type="text" class="form-control" id="fechaNacimiento" name="fechaNacimiento" placeholder="" value="" required>
               <div class="invalid-feedback">
               La fecha de nacimiento es obligatoria
               </div>
@@ -140,14 +140,14 @@
           <!-- Colegio - Curso -->
           <div class="row g-3">
             <div class="col-sm-8">
-              <label for="firstName" class="form-label">Colegio actual</label>
+              <label for="colegio" class="form-label">Colegio actual</label>
               <input type="text" class="form-control" id="colegio" name="colegio" placeholder="" value="" required>
               <div class="invalid-feedback">
                 El valor para el colegio actual es obligatorio
               </div>
             </div>
             <div class="col-sm-4">
-              <label for="lastName" class="form-label">Curso escolar</label>
+              <label for="curso" class="form-label">Curso escolar</label>
               <select class="selectpicker col-12" name="curso">
                 <option>4º PRIMARIA</option>
                 <option>6º PRIMARIA</option>
@@ -170,16 +170,16 @@
           <!-- Nombre y apellidos del padre -->
           <div class="row g-3">
             <div class="col-sm-6">
-              <label for="firstName" class="form-label">Del padre apellidos</label>
-              <input type="text" class="form-control" id="apellidos-padre" id="apellidos-padre" name="apellidos-padre" placeholder="" value="" required>
+              <label for="apellidosPadre" class="form-label">Del padre apellidos</label>
+              <input type="text" class="form-control" id="apellidosPadre" id="apellidosPadre" name="apellidosPadre" placeholder="" value="" required>
               <div class="invalid-feedback">
                     El valor para los apellidos del padre son obligatorios
               </div>
             </div>
 
             <div class="col-sm-6">
-              <label for="lastName" class="form-label">y nombre</label>
-              <input type="text" class="form-control" id="nombre-padre" name="nombre-padre" placeholder="" value="" required>
+              <label for="nombrePadre" class="form-label">y nombre</label>
+              <input type="text" class="form-control" id="nombrePadre" name="nombrePadre" placeholder="" value="" required>
               <div class="invalid-feedback">
                 El valor del nombre del padre es obligatorio
               </div>
@@ -189,15 +189,15 @@
           <!-- Dni y tlfno del padre -->
           <div class="row g-3">
             <div class="col-sm-6">
-              <label for="lastName" class="form-label">DNI del padre</label>
-              <input type="text" class="form-control" id="dni-padre" name="dni-padre" placeholder="" value="" required>
+              <label for="dniPadre" class="form-label">DNI del padre</label>
+              <input type="text" class="form-control" id="dniPadre" name="dniPadre" placeholder="" value="" required>
               <div class="invalid-feedback">
                 El dni del padre es obligatorio
               </div>
             </div>
             <div class="col-sm-6">
-              <label for="firstName" class="form-label">Teléfono del padre</label>
-              <input type="text" class="form-control" id="telefono-padre" name="telefono-padre" placeholder="" value="" required>
+              <label for="telefonoPadre" class="form-label">Teléfono del padre</label>
+              <input type="text" class="form-control" id="telefonoPadre" name="telefonoPadre" placeholder="" value="" required>
               <div class="invalid-feedback">
                 El valor del teléfono del padre es obligatorio
               </div>
@@ -221,15 +221,15 @@
           <!-- Nombre y apellidos de la madre -->
           <div class="row g-3">
             <div class="col-sm-6">
-              <label for="firstName" class="form-label">De la madre apellidos</label>
-              <input type="text" class="form-control" id="apellidos-madre" name="apellidos-madre" placeholder="" value="" required>
+              <label for="apellidosMadre" class="form-label">De la madre apellidos</label>
+              <input type="text" class="form-control" id="apellidosMadre" name="apellidosMadre" placeholder="" value="" required>
               <div class="invalid-feedback">
               El valor para los apellidos de la madre son obligatorios
               </div>
             </div>
             <div class="col-sm-6">
-              <label for="lastName" class="form-label">y nombre</label>
-              <input type="text" class="form-control" id="nombre-madre" name="nombre-madre" placeholder="" value="" required>
+              <label for="nombreMadre" class="form-label">y nombre</label>
+              <input type="text" class="form-control" id="nombreMadre" name="nombreMadre" placeholder="" value="" required>
               <div class="invalid-feedback">
                 El valor del nombre de la madre es obligatorio
               </div>
@@ -239,15 +239,15 @@
           <!-- Dni y tlfn de la madre -->
           <div class="row g-3">
             <div class="col-sm-6">
-              <label for="lastName" class="form-label">DNI de la madre</label>
-              <input type="text" class="form-control" id="dni-madre" name="dni-madre" placeholder="" value="" required>
+              <label for="dniMadre" class="form-label">DNI de la madre</label>
+              <input type="text" class="form-control" id="dniMadre" name="dniMadre" placeholder="" value="" required>
               <div class="invalid-feedback">
                 El valor del dni de la madre es obligatorio
               </div>
             </div>
             <div class="col-sm-6">
-              <label for="firstName" class="form-label">Teléfono de la madre</label>
-              <input type="text" class="form-control" id="telefono-madre" name="telefono-madre" placeholder="" value="" required>
+              <label for="telefonMadre" class="form-label">Teléfono de la madre</label>
+              <input type="text" class="form-control" id="telefonMadre" name="telefonMadre" placeholder="" value="" required>
               <div class="invalid-feedback">
                 El valor del teléfono de la madre es obligatorio
               </div>
@@ -270,7 +270,7 @@
           <!-- Dirección y codpostal -->
           <div class="row g-3">
             <div class="col-sm-9">
-              <label for="firstName" class="form-label">Dirección</label>
+              <label for="direccion" class="form-label">Dirección</label>
               <input type="text" class="form-control" id="direccion" name="direccion" placeholder="" value="" required>
               <div class="invalid-feedback">
                 El valor para la dirección de la  madre es obligatorio
@@ -278,7 +278,7 @@
             </div>
   
             <div class="col-sm-3">
-              <label for="lastName" class="form-label">C.P.</label>
+              <label for="codpost" class="form-label">C.P.</label>
               <input type="text" class="form-control" id="codpost" name="codpost" placeholder="" value="" required>
               <div class="invalid-feedback">
                 El valor del código postal es obligatorio
@@ -300,8 +300,8 @@
           <!-- Alergias -->
           <div class="row g-3">
             <div class="col-12">
-              <label for="texto" class="form-label">Alergias, circunstancias epeciales en la familia, dificultades de aprendizaje, etc. <span class="text-muted">(Optional)</span></label>
-              <textarea class="form-control" id="texto" name="alergias" rows="3"></textarea>
+              <label for="alergias" class="form-label">Alergias, circunstancias epeciales en la familia, dificultades de aprendizaje, etc. <span class="text-muted">(Optional)</span></label>
+              <textarea class="form-control" id="alergias" name="alergias" rows="3"></textarea>
             </div>
           </div>
 
@@ -321,12 +321,12 @@
               </div>
               <div class="col-2">
                 <div class="form-check form-check-inline">
-                  <input id="imagen-digital-si" name="imagen-digital" type="radio" class="form-check-input" checked required>
-                  <label class="form-check-label" for="imagen-digital-si">SI</label>
+                  <input id="imagenDigitalSi" name="imagenDigital" type="radio" class="form-check-input" checked required>
+                  <label class="form-check-label" for="imagenDigitalSi">SI</label>
                 </div>
                 <div class="form-check form-check-inline">
-                  <input id="imagen-digital-no" name="imagen-digital" type="radio" class="form-check-input" required>
-                  <label class="form-check-label" for="imagen-digital-no">NO</label>
+                  <input id="imagenDigitalNo" name="imagenDigital" type="radio" class="form-check-input" required>
+                  <label class="form-check-label" for="imagenDigitalNo">NO</label>
                 </div>
               </div>
             </div>
@@ -336,12 +336,12 @@
               </div>
               <div class="col-2">
                 <div class="form-check form-check-inline">
-                  <input id="imagen-impresa-si" name="imagen-impresa" type="radio" class="form-check-input" checked required>
-                  <label class="form-check-label" for="imagen-impresa-si">SI</label>
+                  <input id="imagenImpresaSi" name="imagenImpresa" type="radio" class="form-check-input" checked required>
+                  <label class="form-check-label" for="imagenImpresaSi">SI</label>
                 </div>
                 <div class="form-check form-check-inline">
-                  <input id="imagen-impresa-no" name="imagen-impresa" type="radio" class="form-check-input" required>
-                  <label class="form-check-label" for="imagen-impresa-no">NO</label>
+                  <input id="imagenImpresaNo" name="imagenImpresa" type="radio" class="form-check-input" required>
+                  <label class="form-check-label" for="imagenImpresaNo">NO</label>
                 </div>
               </div>
             </div>
@@ -352,12 +352,12 @@
               </div>
               <div class="col-2">
                 <div class="form-check form-check-inline">
-                  <input id="comunicaciones-si" name="comunicaciones" type="radio" class="form-check-input" checked required>
-                  <label class="form-check-label" for="comunicaciones-si">SI</label>
+                  <input id="comunicacionesSi" name="comunicaciones" type="radio" class="form-check-input" checked required>
+                  <label class="form-check-label" for="comunicacionesSi">SI</label>
                 </div>
                 <div class="form-check form-check-inline">
-                  <input id="comunicaciones-no" name="comunicaciones" type="radio" class="form-check-input" required>
-                  <label class="form-check-label" for="comunicaciones-no">NO</label>
+                  <input id="comunicacionesNo" name="comunicaciones" type="radio" class="form-check-input" required>
+                  <label class="form-check-label" for="comunicacionesNo">NO</label>
                 </div>
               </div>
             </div>
@@ -368,12 +368,12 @@
               </div>
               <div class="col-2">
                 <div class="form-check form-check-inline">
-                  <input id="datos-salud-si" name="datos-salud" type="radio" class="form-check-input" checked required>
-                  <label class="form-check-label" for="datos-salud-si">SI</label>
+                  <input id="datosSaludSi" name="datosSalud" type="radio" class="form-check-input" checked required>
+                  <label class="form-check-label" for="datosSaludSi">SI</label>
                 </div>
                 <div class="form-check form-check-inline">
-                  <input id="datos-salud-no" name="datos-salud" type="radio" class="form-check-input" required>
-                  <label class="form-check-label" for="datos-salud-no">NO</label>
+                  <input id="datosSaludNo" name="datosSalud" type="radio" class="form-check-input" required>
+                  <label class="form-check-label" for="datosSaludNo">NO</label>
                 </div>
               </div>
             </div>
@@ -381,8 +381,8 @@
 
           <h5>PROTECCIÓN DE DATOS II:</h5>
           <div class="form-check form-check-inline">
-            <input type="checkbox" class="form-check-input" id="acepta-trat" name="acepta-trat" required>
-            <label class="form-check-label" for="acepta-trat">Acepto el tratamiento de los datos Política de privacidad. Si se produce alguna modificación de sus datos, comuníquenoslo, para mantener sus datos actualizados. El abajo firmante, declara que los datos de contacto son ciertos y que se ha informado y obtenido el consentimiento para el tratamiento de datos por parte de las Parroquias. Para más información sobre tratamiento de los datos lo pueden solicitar a <a href="mailto:inscripcionsanvicenteferrer@gmail.com">inscripcionsanvicenteferrer@gmail.com</a></label>
+            <input type="checkbox" class="form-check-input" id="aceptaTrat" name="aceptaTrat" required>
+            <label class="form-check-label" for="aceptaTrat">Acepto el tratamiento de los datos Política de privacidad. Si se produce alguna modificación de sus datos, comuníquenoslo, para mantener sus datos actualizados. El abajo firmante, declara que los datos de contacto son ciertos y que se ha informado y obtenido el consentimiento para el tratamiento de datos por parte de las Parroquias. Para más información sobre tratamiento de los datos lo pueden solicitar a <a href="mailto:inscripcionsanvicenteferrer@gmail.com">inscripcionsanvicenteferrer@gmail.com</a></label>
           </div>
 
           <hr class="my-4">
@@ -454,20 +454,20 @@
     			let campoErroneo = '';
     			const campos=[ 
     				'apellidos',
-    				'apellidos-madre',
-    				'apellidos-padre',
+    				'apellidosMadre',
+    				'apellidosPadre',
     				'codpost',
     				'colegio',
     				'direccion',
-    				'dni-madre',
-    				'dni-padre',
+    				'dniMadre',
+    				'dniPadre',
     				'email',
-    				'fecha-nacimiento',
+    				'fechaNacimiento',
     				'nombre',
-    				'nombre-madre',
-    				'nombre-padre',
-    				'telefono-madre',
-    				'telefono-padre',
+    				'nombreMadre',
+    				'nombrePadre',
+    				'telefonoMadre',
+    				'telefonoPadre',
     			];
           let erroneos = 0;
     			campos.forEach(element => {
@@ -480,7 +480,7 @@
           if( erroneos >  0 )
             return;
   			}
-  			postData("http://127.0.0.1/api/post-solicitud", serialized).then((data) => {
+  			postData("http://127.0.0.1:8080/api/post-solicitud", serialized).then((data) => {
           console.log(data); // JSON data parsed by `data.json()` call
         });
 
