Arreglos en HTML

--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
             </div>
   
             <div class="row py-1" >
-              <div class="col-2"><h5>Parroquia</h5></div>
+              <div class="col-sm-2"><h5>Parroquia</h5></div>
               <div class="col-8">
                 <!-- <input class="col-12" type="text" width="100%"> -->
                 <select class="selectpicker col-12" name="parroquia">
@@ -44,7 +44,7 @@
             </div>
 
             <div class="row p-1">
-              <div class="col-2"><h5>Nivel</h5></div>
+              <div class="col-sm-2"><h5>Nivel</h5></div>
               <div class="col-8">
                 <!-- <input class="col-12" type="text" width="100%"> -->
                 <select class="selectpicker col-12" name="nivel">
@@ -55,10 +55,10 @@
                   <option>Confirmación: 2º ESO, 1º BACH.</option>
                 </select>
               </div> 
-              <div class="col-2"><small>(Seleccionar)</small></div> 
             </div>
         </div>
   
+       
         <div class="col-lg-1">
             <img src="./parroquia_inmaculada_concepcion.png" width="100px">
         </div>
@@ -283,8 +283,8 @@
           <!-- e-mail -->
           <div class="row g-3">
             <div class="col-12">
-              <label for="email" class="form-label">Email <span class="text-muted">(Optional)</span></label>
-              <input type="email" class="form-control" id="email" name="email" placeholder="you@example.com">
+              <label for="email" class="form-label">Email</label>
+              <input type="email" class="form-control" id="email" name="email" >
               <div class="invalid-feedback">
                 El valor del email de contacto es obligatorio
               </div>
@@ -294,7 +294,7 @@
           <!-- Alergias -->
           <div class="row g-3">
             <div class="col-12">
-              <label for="alergias" class="form-label">Alergias, circunstancias epeciales en la familia, dificultades de aprendizaje, etc. <span class="text-muted">(Optional)</span></label>
+              <label for="alergias" class="form-label">Alergias, circunstancias epeciales en la familia, dificultades de aprendizaje, etc.</label>
               <textarea class="form-control" id="alergias" name="alergias" rows="3"></textarea>
             </div>
           </div>
@@ -302,7 +302,7 @@
           <!-- Comentarios -->
           <div class="row g-3">
             <div class="col-12">
-              <label for="comentarios" class="form-label">Comentarios <span class="text-muted">(Optional)</span></label>
+              <label for="comentarios" class="form-label">Comentarios</label>
               <textarea class="form-control" id="comentarios" name="comentarios" rows="3"></textarea>
             </div>
           </div>
