--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
   
        
         <div class="col-lg-1">
-            <img src="./parroquia_inmaculada_concepcion.png" width="100px">
+            <img src="./parroquia_inmaculada_concepcion.png" width="100px" class="noverenmovil">
         </div>
       </div>
 
