Se añade ocultacion del icono de San Vicente

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     <!-- Anagramas -->
       <div class="row g-3">
         <div class="col-lg-1">
-            <img src="./iglesia_parroquial_sant_vicent_ferrer.png" width="100px">
+            <img src="./iglesia_parroquial_sant_vicent_ferrer.png" width="100px"  class="noverenmovil">
         </div>
   
         <div class="col-10 text-center">
