--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,7 @@
                 <select class="selectpicker col-12" name="parroquia">
                   <option>San Vicente Ferrer</option>
                   <option>La Inmaculada</option>
+                  <option>Santa Isabel</option>
                 </select>
               </div> 
             </div>
@@ -122,7 +123,7 @@
               <select class="selectpicker col-12" name="bautizo">
                 <option>San Vicente Ferrer</option>
                 <option>Inmaculada Concepción</option>
-                <option>Santa Isabel de Hungría</option>
+                <option>Santa Isabel</option>
                 <option>Otra</option>
                 <option>No está bautizado</option>
               </select>
